<resources>
    <string name="app_name">Cycle Safe</string>
    <string name="login_name">LOGIN</string>
    <string name="register_name">REGISTER</string>
    <string name="not_registered">Not registered?</string>
    <string name="logo_info">bike logo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="facebook_app_id">782740458493942</string>
</resources>
