<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.galatexlabs.cyclesafe.RegisterActivity"
    android:background="#3D3930">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="37sp"
        android:minWidth="270sp"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textAlignment="center"
        android:layout_marginTop="200sp"
        android:ems="10"
        android:id="@+id/editTextName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#19a662" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="270sp"
        android:minHeight="37sp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/Email"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:textAlignment="center"
        android:background="#19a662"
        android:layout_marginTop="15sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="270sp"
        android:minHeight="37sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPasswordText"
        android:layout_below="@+id/Email"
        android:layout_alignStart="@+id/Email"
        android:textAlignment="center"
        android:background="#19a662"
        android:layout_marginTop="15sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="270sp"
        android:minHeight="37sp"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPasswordVerifyText"
        android:layout_below="@+id/editPasswordText"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="#19a662"
        android:layout_marginTop="15sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="230sp"
        android:minHeight="55sp"
        android:text="@string/register_name"
        android:id="@+id/btnRegister"
        android:background="#19a662"
        android:textSize="43sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editPasswordVerifyText"
        android:layout_marginTop="30sp" />

</RelativeLayout>