<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#3D3930"
    tools:context="io.galatexlabs.cyclesafe.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="270sp"
        android:minHeight="37sp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/loginEmail"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:textAlignment="center"
        android:background="#19a662"
        android:layout_marginTop="220sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="270sp"
        android:minHeight="37sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPassword"
        android:layout_below="@+id/loginEmail"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:background="#19a662"
        android:layout_marginTop="15sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="230sp"
        android:minHeight="55sp"
        android:text="@string/login_name"
        android:id="@+id/btnLogin"
        android:background="#19a662"
        android:textSize="43sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginPassword"
        android:layout_marginTop="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/not_registered"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp" />

</RelativeLayout>
